<resources>
    <string name="app_name">Wsalny</string>
    <string name="i_m_a_driver">I\'m a Driver</string>
    <string name="i_m_a_customer">I\'m a Customer</string>
    <string name="customer_login">Customer Login</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="driver_login">Driver Login</string>
    <string name="don_t_have_a_account">Don\'t Have a Account</string>
    <string name="register">Register</string>
    <string name="title_activity_driver_map">Map</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="title_activity_customers_map">Map</string>
    <string name="call_a_car">Call A Car</string>
    <string name="change_picture">Change Picture</string>
    <string name="your_name">Your Name</string>
    <string name="phone">Your Phone</string>
    <string name="you_car_name">Your Car Name</string>
    <string name="name_driver">Name Driver</string>
    <string name="driver_number">Driver Number Phone</string>
    <string name="driver_car_name">Driver Car Name</string>
    <string name="customer_car_name">Customer Car Name</string>
    <string name="customer_number">Customer Phone Number</string>
    <string name="name_customer">Customer Name</string>
</resources>
