<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.customer.CustomersMapActivity">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimaryDark">
        <Button
            android:id="@+id/customer_setting"
            android:text="@string/settings"
            android:textColor="@android:color/white"
            android:layout_width="200dp"
            android:textAllCaps="false"
            android:background="@null"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/customer_logout"
            android:text="@string/logout"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:layout_width="200dp"
            android:background="@null"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/customer_setting"/>
    </RelativeLayout>

    <fragment
        android:id="@+id/map"
        android:layout_below="@id/relative"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_above="@id/customer_call_car_button"
        android:layout_margin="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image_driver"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/profile"
            android:layout_alignParentStart="true"
            map:civ_border_width="2dp"
            map:civ_border_color="#c880ff"
            android:padding="3dp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/name_driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/profile_image_driver"
            android:text="@string/name_driver"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/phone_driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/profile_image_driver"
            android:text="@string/driver_number"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:layout_below="@id/name_driver"/>

        <TextView
            android:id="@+id/car_name_driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/profile_image_driver"
            android:text="@string/driver_car_name"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:layout_below="@id/phone_driver"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/phone"
            android:tint="@android:color/black"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <Button
        android:id="@+id/customer_call_car_button"
        android:text="@string/call_a_car"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:layout_height="wrap_content" />
</RelativeLayout>
