<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activities.driver.DriverMapActivity">

    <RelativeLayout
        android:id="@+id/ree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark">

        <Button
            android:id="@+id/settings_driver_btn"
            android:text="@string/settings"
            android:textColor="@android:color/white"
            android:layout_width="200dp"
            android:textAllCaps="false"
            android:background="@null"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/logout_driv_btn"
            android:text="@string/logout"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:layout_width="200dp"
            android:background="@null"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/settings_driver_btn"/>
    </RelativeLayout>

    <fragment
        android:layout_below="@id/ree"
        android:id="@+id/map"
        android:layout_centerInParent="true"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <RelativeLayout
        android:id="@+id/rel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:visibility="gone">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image_customer"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/profile"
            android:layout_alignParentStart="true"
            map:civ_border_width="2dp"
            map:civ_border_color="#c880ff"
            android:padding="3dp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/name_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/profile_image_customer"
            android:text="@string/name_customer"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/phone_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/profile_image_customer"
            android:text="@string/customer_number"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:layout_below="@id/name_customer"/>



        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/phone"
            android:tint="@android:color/white"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</RelativeLayout>


